--- a/requirements-saltbox.txt
+++ b/requirements-saltbox.txt
@@ -1,16 +1,55 @@
 ansible==9.5.1
+ansible-compat==24.5.1
+ansible-core==2.16.6
 ansible-lint==24.5.0
-argon2_cffi==23.1.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+attrs==23.2.0
+black==24.4.2
+bracex==2.4
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cryptography==42.0.7
 dnspython==2.6.1
 docker==7.0.0
-jinja2==3.1.4
+filelock==3.14.0
+idna==3.7
+importlib_metadata==7.1.0
+Jinja2==3.1.4
 jmespath==1.0.1
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
 lxml==5.2.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+mypy-extensions==1.0.0
 ndg-httpsclient==0.5.1
 netaddr==1.2.1
+packaging==24.0
 passlib==1.7.4
+pathspec==0.12.1
+platformdirs==4.2.2
+pyasn1==0.6.0
+pycparser==2.22
+Pygments==2.18.0
 PyMySQL==1.1.0
 pyOpenSSL==24.1.0
+PyYAML==6.0.1
+referencing==0.35.1
 requests==2.31.0
+resolvelib==1.0.1
+rich==13.7.1
+rpds-py==0.18.1
 ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
+setuptools==69.5.1
+subprocess-tee==0.4.1
 tld==0.13
+urllib3==2.2.1
+wcmatch==8.5.2
+wheel==0.43.0
+yamllint==1.35.1
+zipp==3.18.2
