--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,12 +33,18 @@ jobs:
         run: ./venv/bin/pip list
 
       - name: Prepare script with version
+        if: github.event_name != 'pull_request'
         run: |
           echo "Building with version ${GITHUB_REF#refs/tags/}"
           sed "s/__version__ = \"0.0.0\"/__version__ = \"${GITHUB_REF#refs/tags/}\"/" sb.py > sb_with_version.py
 
       - name: Compile binary
+        if: github.event_name != 'pull_request'
         run: ./venv/bin/python -m nuitka sb_with_version.py --onefile -o sb && chmod +x sb
+
+      - name: Compile binary
+        if: github.event_name == 'pull_request'
+        run: ./venv/bin/python -m nuitka sb.py --onefile -o sb && chmod +x sb
 
       - name: Release
         uses: softprops/action-gh-release@v2
@@ -48,12 +54,12 @@ jobs:
             sb
 
       - name: Run release workflow 
-        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/') && github.event_name != 'pull_request'
         run: gh workflow run release.yml -f release_tag=${{ github.ref }}
         env:
           GH_TOKEN: ${{ github.token }}
 
       - uses: sarisia/actions-status-discord@v1
-        if: always()
+        if: always() && github.event_name != 'pull_request'
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
