--- a/requirements-saltbox.txt
+++ b/requirements-saltbox.txt
@@ -1,10 +1,12 @@
-ansible==9.6.0
 ansible-lint==24.5.0
-argon2-cffi==23.1.0
+ansible==9.6.0
+apprise==1.8.0
 argon2-cffi-bindings==21.2.0
+argon2-cffi==23.1.0
 attrs==23.2.0
 black==24.4.2
 bracex==2.4
+certbot==2.10.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -17,8 +19,8 @@ idna==3.7
 importlib_metadata==7.1.0
 Jinja2==3.1.4
 jmespath==1.0.1
-jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+jsonschema==4.22.0
 lxml==5.2.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -41,8 +43,8 @@ requests==2.31.0
 resolvelib==1.0.1
 rich==13.7.1
 rpds-py==0.18.1
-ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
+ruamel.yaml==0.18.6
 setuptools==70.0.0
 subprocess-tee==0.4.1
 tld==0.13
