--- a/requirements-saltbox.txt
+++ b/requirements-saltbox.txt
@@ -9,6 +9,7 @@ lxml==5.2.2
 ndg-httpsclient==0.5.1
 netaddr==1.3.0
 passlib==1.7.4
+pexpect==4.9.0
 PyMySQL==1.1.1
 pyOpenSSL==24.1.0
 requests==2.32.3
