--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,18 +3,14 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'sb.py'
-      - 'requirements/requirements.txt'
+      - '**.py'
+      - 'requirements/**'
     tags:
       - '*'
   pull_request:
     paths:
-    - 'sb.py'
-    - 'requirements/requirements.txt'
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+    - '**.py'
+    - 'requirements/**'
 
 jobs:
   build:
@@ -41,8 +37,8 @@ jobs:
       - name: Compile binary
         run: ./venv/bin/python -m nuitka sb.py --onefile -o sb && chmod +x sb
 
-      - name: Upload artifact (PR)
-        if: github.event_name == 'pull_request'
+      - name: Upload artifact
+        if: github.event_name == 'pull_request' || github.event_name == 'push'
         uses: actions/upload-artifact@v4
         with:
           name: sb
@@ -62,6 +58,6 @@ jobs:
           GH_TOKEN: ${{ github.token }}
 
       - uses: sarisia/actions-status-discord@v1
-        if: always() && github.event_name != 'pull_request'
+        if: always() && startsWith(github.ref, 'refs/tags/') && github.event_name != 'pull_request'
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
