--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: ./venv/bin/pip list
 
       - name: Prepare script with version
-        if: github.event_name != 'pull_request'
+        if: startsWith(github.ref, 'refs/tags/') && github.event_name != 'pull_request'
         run: |
           echo "Building with version ${GITHUB_REF#refs/tags/}"
           sed -i "s/__version__ = \"0.0.0\"/__version__ = \"${GITHUB_REF#refs/tags/}\"/" sb.py
