GHA: silence pip upgrade notice

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         run: python3.10 -m venv venv
 
       - name: Install Dependencies
-        run: ./venv/bin/pip install -r requirements/requirements.txt
+        run: ./venv/bin/pip install --disable-pip-version-check -r requirements/requirements.txt
 
       - name: List Pip modules
         run: ./venv/bin/pip list
