--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/') && github.event_name != 'pull_request'
         run: gh workflow run release.yml -f release_tag=${{ github.ref }}
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
       - uses: sarisia/actions-status-discord@v1
         if: always() && startsWith(github.ref, 'refs/tags/') && github.event_name != 'pull_request'
