specify contents permission directly

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,9 @@ on:
       release_tag:
         required: true
 
+permissions:
+  contents: write
+
 jobs:
   update-release-file:
     runs-on: ubuntu-latest
