--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,9 @@ on:
       - '*.py'
       - 'requirements/**'
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: self-hosted
@@ -55,7 +58,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/') && github.event_name != 'pull_request'
         run: gh workflow run release.yml -f release_tag=${{ github.ref }}
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ github.token }}
 
       - uses: sarisia/actions-status-discord@v1
         if: always() && startsWith(github.ref, 'refs/tags/') && github.event_name != 'pull_request'
