--- a/requirements-saltbox.txt
+++ b/requirements-saltbox.txt
@@ -1,20 +1,23 @@
-ansible==11.11.0
-ansible-lint==25.9.2
-apprise==1.9.5
+aiohttp==3.13.3
+ansible==13.3.0
+ansible-lint==26.1.1
+apprise==1.9.7
 argon2_cffi==25.1.0
-certbot==5.1.0
+certbot==5.2.2
+cloudflare==4.3.1
 dnspython==2.8.0
 docker==7.1.0
 jinja2==3.1.6
-jmespath==1.0.1
+jmespath==1.1.0
 lxml==6.0.2
 ndg-httpsclient==0.5.1
 netaddr==1.3.0
 passlib==1.7.4
 pexpect==4.9.0
+psycopg[binary]==3.3.2
 PyMySQL==1.1.2
 pyOpenSSL==25.3.0
 requests==2.32.5
-ruamel.yaml==0.18.16
+ruamel.yaml==0.19.1
 tld==0.13.1
-uv==0.9.6
+uv==0.9.28
